<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ChildFinARApp</string>
    <string name="title_activity_main">MainActivity</string>
    <!--string for the respective buttons-->
    <string name="login">Log in</string>
    <string name="password">Your Password</string>
    <string name="email">Your Email</string>
    <string name="logout">Log out</string>
    <string name="enter_child_mode">Enter Child Mode</string>
    <string name="parent">Parent</string>
    <string name="child">Child</string>

    <string name="your_profile"><strong>Your Profile</strong></string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>