<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    tools:context=".ParentActivity">

    <!--<include
        layout="@layout/activity_tool_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />-->

    <TextView
        android:id="@+id/userProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/your_profile"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/parentProfileFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userProfile"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_view_border"
        android:orientation="horizontal"
        android:padding="10dp">


        <TextView
            android:id="@+id/parentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_border_only"
            android:hint="@string/parent"
            android:padding="20dp"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/parentEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/parentName"
            android:background="@drawable/bottom_border_only"
            android:hint="Email"
            android:padding="20dp"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/childName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/parentEmail"
            android:background="@drawable/bottom_border_only"
            android:hint="@string/child"
            android:padding="20dp"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textSize="15sp" />


    </RelativeLayout>


    <Button
        android:id="@+id/enterChildMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/parentProfileFields"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"

        android:layout_marginRight="40dp"
        android:text="@string/enter_child_mode"
        android:textColor="#424242" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterChildMode"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:text="@string/logout"
        android:textColor="#424242" />

</RelativeLayout>