<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    tools:context=".LoginActivity">


    <View
        android:id="@+id/top_bar_rectangle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/pastel_darkgrey"
        android:visibility="visible" />


    <TextView
        android:id="@+id/welcomeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="Welcome!"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <EditText

        android:id="@+id/regUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeHeader"
        android:layout_marginStart="10pt"
        android:layout_marginTop="10pt"
        android:layout_marginEnd="10pt"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/black" />


    <EditText

        android:id="@+id/regPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/regUserName"
        android:layout_marginStart="10pt"
        android:layout_marginTop="10pt"
        android:layout_marginEnd="10pt"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/regPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:text="@string/login"
        android:textColor="#424242" />

    <Button
        android:id="@+id/signUpButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:text="SIGN UP"
        android:textColor="#424242" />


</RelativeLayout>